--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -101,6 +101,58 @@
         <source>boutique.chercher.nbArticleMessage</source>
         <target>Recherche "{search}" : {nbItems} produit()s</target>
       </trans-unit>
+      <trans-unit id="HBdNwHa" resname="panier.index.nbProductAndPrice">
+        <source>panier.index.nbProductAndPrice</source>
+        <target>{nbProduit} Produit(s) : {totalPrice} € </target>
+      </trans-unit>
+      <trans-unit id="XeYbLt4" resname="panier.index.continueShopping">
+        <source>panier.index.continueShopping</source>
+        <target>Continuer les Courses</target>
+      </trans-unit>
+      <trans-unit id=".TIQVmS" resname="panier.index.placeOrder">
+        <source>panier.index.placeOrder</source>
+        <target>Passer la commande</target>
+      </trans-unit>
+      <trans-unit id="Mm9oAxC" resname="panier.index.itemLabel">
+        <source>panier.index.itemLabel</source>
+        <target>Produit</target>
+      </trans-unit>
+      <trans-unit id="wSmJNEw" resname="panier.index.PriceLabel">
+        <source>panier.index.PriceLabel</source>
+        <target>Prix</target>
+      </trans-unit>
+      <trans-unit id="VN5SlUP" resname="panier.index.quantityLabel">
+        <source>panier.index.quantityLabel</source>
+        <target>Quantite</target>
+      </trans-unit>
+      <trans-unit id="EJF5MDN" resname="panier.index.totalLabel">
+        <source>panier.index.totalLabel</source>
+        <target>Total</target>
+      </trans-unit>
+      <trans-unit id=".ioV3B4" resname="panier.index.removeLabel">
+        <source>panier.index.removeLabel</source>
+        <target>Supprimer</target>
+      </trans-unit>
+      <trans-unit id="saYBOXy" resname="panier.index.productPrice">
+        <source>panier.index.productPrice</source>
+        <target>{price} €</target>
+      </trans-unit>
+      <trans-unit id="Y9U5EYX" resname="panier.index.totalProductPrice">
+        <source>panier.index.totalProductPrice</source>
+        <target>{totalProductPrice} €</target>
+      </trans-unit>
+      <trans-unit id="RNicxMJ" resname="panier.index.removeProduct">
+        <source>panier.index.removeProduct</source>
+        <target>Supprimer {productName}</target>
+      </trans-unit>
+      <trans-unit id="iyYQsB3" resname="panier.index.totalPrice">
+        <source>panier.index.totalPrice</source>
+        <target>{totalPrice} €</target>
+      </trans-unit>
+      <trans-unit id="T6aaHxr" resname="panier.index.emptyCart">
+        <source>panier.index.emptyCart</source>
+        <target>Vider le Panier</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
