--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -165,6 +165,30 @@
         <source>navbar.usagerHome</source>
         <target>__navbar.usagerHome</target>
       </trans-unit>
+      <trans-unit id="GwqxVc0" resname="panier.commande.myOrder">
+        <source>panier.commande.myOrder</source>
+        <target>__panier.commande.myOrder</target>
+      </trans-unit>
+      <trans-unit id="Jc1kbg3" resname="panier.commande.rankFirstName">
+        <source>panier.commande.rankFirstName</source>
+        <target>__panier.commande.rankFirstName</target>
+      </trans-unit>
+      <trans-unit id="FoStbMn" resname="panier.commande.rankLastName">
+        <source>panier.commande.rankLastName</source>
+        <target>__panier.commande.rankLastName</target>
+      </trans-unit>
+      <trans-unit id="Crw5YsW" resname="panier.commande.numberOrder">
+        <source>panier.commande.numberOrder</source>
+        <target>__panier.commande.numberOrder</target>
+      </trans-unit>
+      <trans-unit id="cW9koCc" resname="panier.commande.orderDate">
+        <source>panier.commande.orderDate</source>
+        <target>__panier.commande.orderDate</target>
+      </trans-unit>
+      <trans-unit id="ZUH8P_f" resname="panier.commande.status">
+        <source>panier.commande.status</source>
+        <target>__panier.commande.status</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
