--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -165,6 +165,30 @@
         <source>navbar.usagerHome</source>
         <target>Accueil</target>
       </trans-unit>
+      <trans-unit id="GwqxVc0" resname="panier.commande.myOrder">
+        <source>panier.commande.myOrder</source>
+        <target>Dernière commande</target>
+      </trans-unit>
+      <trans-unit id="Jc1kbg3" resname="panier.commande.rankFirstName">
+        <source>panier.commande.rankFirstName</source>
+        <target>Prénom</target>
+      </trans-unit>
+      <trans-unit id="FoStbMn" resname="panier.commande.rankLastName">
+        <source>panier.commande.rankLastName</source>
+        <target>Nom</target>
+      </trans-unit>
+      <trans-unit id="Crw5YsW" resname="panier.commande.numberOrder">
+        <source>panier.commande.numberOrder</source>
+        <target>N°</target>
+      </trans-unit>
+      <trans-unit id="cW9koCc" resname="panier.commande.orderDate">
+        <source>panier.commande.orderDate</source>
+        <target>Date</target>
+      </trans-unit>
+      <trans-unit id="ZUH8P_f" resname="panier.commande.status">
+        <source>panier.commande.status</source>
+        <target>Status</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
